RESOLVED FIXED128059
[EFL] REGRESSION(r163234) EFL debug build is broken
https://bugs.webkit.org/show_bug.cgi?id=128059
Summary [EFL] REGRESSION(r163234) EFL debug build is broken
Hunseop Jeong
Reported 2014-02-01 19:53:56 PST
EFL debug build is broken after r163234 on EFL.
Attachments
Patch (1.28 KB, patch)
2014-02-01 20:06 PST, Hunseop Jeong
no flags
Patch (1.28 KB, patch)
2014-02-01 21:35 PST, Hunseop Jeong
no flags
Patch (1.27 KB, patch)
2014-02-01 22:08 PST, Hunseop Jeong
no flags
Hunseop Jeong
Comment 1 2014-02-01 20:06:25 PST
Ryuan Choi
Comment 2 2014-02-01 20:39:08 PST
Comment on attachment 222902 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=222902&action=review > Source/WebCore/ChangeLog:6 > + Reviewed by NOBODY (OOPS!). Because this is build fix, you can make the patch as "Unreviewed build fix" > Source/WebCore/ChangeLog:11 > + Fixed the broken build on EFL after r163234. > + > + * Modules/indexeddb/IDBKeyData.cpp: > + (WebCore::IDBKeyData::loggingString): Added the default: case. I am not sure whether it is EFL specific. Maybe "Debug build is broken with INDEXED_DATABASE > Source/WebCore/Modules/indexeddb/IDBKeyData.cpp:279 > } Like other statements, Can we add it out of switch() with "ASSERT_NOT_REACHED();"
Hunseop Jeong
Comment 3 2014-02-01 21:35:14 PST
Gyuyoung Kim
Comment 4 2014-02-01 21:48:55 PST
Comment on attachment 222906 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=222906&action=review You don't need to request review in unreviewed case. > Source/WebCore/ChangeLog:3 > + [EFL] REGRESSION(r163234) EFL debug build is broken Remove [EFL] prefix. > Source/WebCore/ChangeLog:6 > + Unriewed. Debug build is broken with INDEXED_DATABASE. Typo. Unreviewed.
Hunseop Jeong
Comment 5 2014-02-01 22:08:21 PST
WebKit Commit Bot
Comment 6 2014-02-01 23:57:43 PST
Comment on attachment 222909 [details] Patch Clearing flags on attachment: 222909 Committed r163261: <http://trac.webkit.org/changeset/163261>
WebKit Commit Bot
Comment 7 2014-02-01 23:57:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.