REGRESSION(r163234) Debug build is broken https://bugs.webkit.org/show_bug.cgi?id=128059

Unreviewed. Debug build is broken with INDEXED_DATABASE.

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2014-02-01

* Modules/indexeddb/IDBKeyData.cpp:
(WebCore::IDBKeyData::loggingString): Added the default: case.

Canonical link: https://commits.webkit.org/146079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163261 268f45cc-cd09-0410-ab3c-d52691b4dbfc